compiler-rs/ir/tests/snapshots/lowering_snapshot_tests__lower_quantifier_expression.snap
---
source: compiler-rs/ir/tests/lowering_snapshot_tests.rs
expression: hir
---
HirFile {
    file_id: FileId(
        0,
    ),
    items: [
        HirId(
            0,
        ),
    ],
    arena: HirArena {
        nodes: [
            Item(
                Item {
                    span: Span {
                        start: 0,
                        end: 31,
                    },
                    annotations: [],
                    kind: Const(
                        ConstDef {
                            name: Name {
                                span: Span {
                                    start: 0,
                                    end: 5,
                                },
                            },
                            value: ExprId(
                                6,
                            ),
                        },
                    ),
                },
            ),
        ],
        bodies: [],
        exprs: [
            Expr {
                span: Span {
                    start: 13,
                    end: 14,
                },
                kind: Name(
                    Name {
                        span: Span {
                            start: 13,
                            end: 14,
                        },
                    },
                ),
            },
            Expr {
                span: Span {
                    start: 17,
                    end: 18,
                },
                kind: Literal(
                    Integer(
                        1,
                    ),
                ),
            },
            Expr {
                span: Span {
                    start: 13,
                    end: 18,
                },
                kind: Binary {
                    op: Gt,
                    lhs: ExprId(
                        0,
                    ),
                    rhs: ExprId(
                        1,
                    ),
                },
            },
            Expr {
                span: Span {
                    start: 20,
                    end: 21,
                },
                kind: Name(
                    Name {
                        span: Span {
                            start: 20,
                            end: 21,
                        },
                    },
                ),
            },
            Expr {
                span: Span {
                    start: 29,
                    end: 30,
                },
                kind: Literal(
                    Integer(
                        2,
                    ),
                ),
            },
            Expr {
                span: Span {
                    start: 20,
                    end: 30,
                },
                kind: Binary {
                    op: Equals,
                    lhs: ExprId(
                        3,
                    ),
                    rhs: ExprId(
                        4,
                    ),
                },
            },
            Expr {
                span: Span {
                    start: 8,
                    end: 31,
                },
                kind: Quantifier {
                    kind: All,
                    conditions: [
                        ExprId(
                            2,
                        ),
                        ExprId(
                            5,
                        ),
                    ],
                },
            },
        ],
        matches: [],
        match_arms: [],
        conditions: [],
    },
    diagnostics: [],
}
